Revision history for PurpleWiki.

0.93 -- August 9, 2004
	- Customizable look-and-feel via templates.  Improved default
	  look-and-feel.
	- Fixed major bug with retrieving old versions of a page.
	- Basic access control, including a new configuration
	  (LoginToEdit) that requires login in order to edit a page.
	- MoinMoin triple braces preformatting syntax.
	- Refactored session management using CGI::Session.  Also
	  generates session log.
	- Built-in support for RSS syndication (action=rss).  No longer
	  need the wikirss cron script, which has been removed from the
	  distribution.
	- Refactored user database and classes.  Can now log in using
	  usernames.
	- Support for Identity Commons i-names.
	- Mostly complete MoinMoin parser, along with a
	  MoinMoin-to-PurpleWiki conversion script.
	- Refactored PurpleWiki::Config using singleton pattern.
	- Improved XHTML conformance.
	- New version numbering system to be more CPAN-friendly.
	- Major code cleanup.  Lots of bug fixes.
	- Apache1NidHandler and Apache2NidHandler have been collapsed
	  to NidHandler, which works for both versions of Apache.
	
0.9.2 -- May 3, 2004
	- New and improved OO View drivers!
	- Support for hard rules (using "----" on a line).
	- Modified the parser to support the XHTML model of nested lists.
	  This is the first step towards full XHTML compliance.
	- Added multiline support for list items and indented paragraphs.
	- Improved installation in Makefile.PL.
	- Additional View drivers for better transclusion support.
	- Moved parentheses support for NIDs back to the wikihtml.pm from
	  the CSS files because Microsoft Internet Explorer doesn't
	  support these directives.
	- Experimental support for remote transclusions.
	- Bug fixes galore!
	
0.9.1 -- February 14, 2004
	- Updated the provided css files in etc to use before and
	  after elements of ( and ) to demonstrate how display of
	  nids can be customized.
	- Umask config option has been added so that wiki pages can be